--- a/app/src/main/res/xml/status_bar_scene.xml
+++ b/app/src/main/res/xml/status_bar_scene.xml
@@ -23,28 +23,22 @@
         app:duration="@android:integer/config_shortAnimTime">
 
         <OnSwipe
-            app:dragDirection="dragUp"
+            app:dragDirection="dragDown"
             app:onTouchUp="autoComplete"
-            app:touchAnchorId="@+id/v_volume_bar_expanded"
-            app:touchAnchorSide="top" />
+            app:touchAnchorId="@+id/status_bar_expanded"
+            app:touchAnchorSide="bottom" />
 
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
 
         <Constraint
-            android:id="@+id/v_volume_bar_expanded"
+            android:id="@+id/status_bar_expanded"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/volume_bar_expanded_height"
+            android:layout_height="@dimen/status_bar_expanded_height"
+            app:layout_constraintBottom_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent">
-
-            <PropertySet
-                android:visibility="visible"
-                app:visibilityMode="ignore" />
-
-        </Constraint>
+            app:layout_constraintStart_toStartOf="parent" />
 
     </ConstraintSet>
 
@@ -53,18 +47,12 @@
         app:deriveConstraintsFrom="@+id/start">
 
         <Constraint
-            android:id="@+id/v_volume_bar_expanded"
+            android:id="@+id/status_bar_expanded"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/volume_bar_expanded_height"
+            android:layout_height="@dimen/status_bar_expanded_height"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
-
-            <PropertySet
-                android:visibility="gone"
-                app:visibilityMode="ignore" />
-
-        </Constraint>
+            app:layout_constraintStart_toStartOf="parent" />
 
     </ConstraintSet>
 
