--- a/app/src/main/res/layout/volume_bar.xml
+++ b/app/src/main/res/layout/volume_bar.xml
@@ -16,6 +16,7 @@
 -->
 <com.litekite.systemui.widget.HideNSeekMotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/volume_bar_container"
     android:layout_width="match_parent"
     android:layout_height="@dimen/volume_bar_expanded_height"
@@ -26,9 +27,46 @@
         android:id="@+id/v_volume_bar_expanded"
         android:layout_width="match_parent"
         android:layout_height="@dimen/volume_bar_expanded_height"
-        android:background="@color/blue"
+        android:background="@drawable/bg_volume_bar_expanded"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_volume_group_name"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="@dimen/volume_bar_expanded_tv_volume_group_name_horizontal_margin"
+        android:gravity="center_vertical"
+        android:text="@string/media"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/sb_volume"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/v_volume_bar_expanded" />
+
+    <com.litekite.widget.SmoothSeekBar
+        android:id="@+id/sb_volume"
+        style="@style/SeekBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/volume_bar_expanded_seek_bar_top_margin"
+        app:layout_constraintEnd_toEndOf="@id/v_volume_bar_expanded"
+        app:layout_constraintStart_toStartOf="@id/v_volume_bar_expanded"
+        app:layout_constraintTop_toTopOf="@id/v_volume_bar_expanded" />
+
+    <TextView
+        android:id="@+id/tv_volume_group_level"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="@dimen/volume_bar_expanded_tv_volume_group_level_horizontal_margin"
+        android:layout_marginBottom="@dimen/volume_bar_expanded_tv_volume_group_level_margin_bottom"
+        android:gravity="center_vertical"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@id/v_volume_bar_expanded"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sb_volume"
+        tools:text="0" />
 
 </com.litekite.systemui.widget.HideNSeekMotionLayout>
