--- a/app/src/main/res/layout/volume_bar.xml
+++ b/app/src/main/res/layout/volume_bar.xml
@@ -16,7 +16,6 @@
 -->
 <com.litekite.systemui.widget.HideNSeekMotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/volume_bar_container"
     android:layout_width="match_parent"
     android:layout_height="@dimen/volume_bar_expanded_height"
@@ -30,43 +29,44 @@
         android:background="@drawable/bg_volume_bar_expanded"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_volume_group_name"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginHorizontal="@dimen/volume_bar_expanded_tv_volume_group_name_horizontal_margin"
-        android:gravity="center_vertical"
+        android:gravity="bottom"
         android:text="@string/media"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/sb_volume"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/v_volume_bar_expanded" />
+        app:layout_constraintBottom_toTopOf="@+id/sb_volume"
+        app:layout_constraintStart_toStartOf="@id/v_volume_bar_expanded"
+        app:layout_constraintTop_toTopOf="@id/v_volume_bar_expanded"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <com.litekite.widget.SmoothSeekBar
         android:id="@+id/sb_volume"
         style="@style/SeekBarStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/volume_bar_expanded_seek_bar_top_margin"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_volume_group_level"
         app:layout_constraintEnd_toEndOf="@id/v_volume_bar_expanded"
         app:layout_constraintStart_toStartOf="@id/v_volume_bar_expanded"
-        app:layout_constraintTop_toTopOf="@id/v_volume_bar_expanded" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_volume_group_name" />
 
     <TextView
         android:id="@+id/tv_volume_group_level"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginHorizontal="@dimen/volume_bar_expanded_tv_volume_group_level_horizontal_margin"
-        android:layout_marginBottom="@dimen/volume_bar_expanded_tv_volume_group_level_margin_bottom"
-        android:gravity="center_vertical"
+        android:gravity="top"
+        android:text="@string/default_volume_level"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/v_volume_bar_expanded"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sb_volume"
-        tools:text="0" />
+        app:layout_constraintEnd_toEndOf="@id/v_volume_bar_expanded"
+        app:layout_constraintTop_toBottomOf="@+id/sb_volume" />
 
 </com.litekite.systemui.widget.HideNSeekMotionLayout>
