--- a/app/src/main/res/xml/volume_bar_scene.xml
+++ b/app/src/main/res/xml/volume_bar_scene.xml
@@ -58,7 +58,8 @@
             android:layout_height="@dimen/volume_bar_expanded_height"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <PropertySet
                 android:visibility="gone"
